# oasisagent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  PHASE3-CTO-REVIEW.md  PRD-dependency-aware-context.md  README.md  config.default.yaml  config.example.yaml  docker-compose.mediastack.yml  docker-compose.yml  docker-stack.yml  home-lab-expert.skill  lab-context-updated.md  oasis-agent-prd.docx  pr-211-review.md  pyproject.toml
.claude/: settings.local.json  sync-docs.json
.github/workflows/: ci.yml  docker-publish.yml
dashboards/: README.md  oasisagent-overview.json
docs/research/: PHASE3-PLAN.md  infrastructure-service-apis.md  networking-security-integrations.md
fail2ban-configs/action.d/: cloudflare-apiv4.conf
fail2ban-configs/filter.d/: npm-docker.conf
fail2ban-configs/jail.d/: npm-docker.local
known_fixes/: cloudflare.yaml  docker.yaml  emqx.yaml  frigate.yaml  homeassistant.yaml  iot.yaml  n8n.yaml  nextcloud.yaml  npm.yaml  ollama.yaml  plex.yaml  portainer.yaml  proxmox.yaml  qbittorrent.yaml  servarr.yaml  stalwart.yaml  unifi.yaml  uptime_kuma.yaml  vaultwarden.yaml
oasisagent/: __init__.py  __main__.py  backoff.py  bootstrap.py  cli.py  cli_config.py  config.py  metrics.py  models.py  orchestrator.py
oasisagent/approval/: listener.py  pending.py
oasisagent/audit/: __init__.py  influxdb.py  reader.py
oasisagent/clients/: __init__.py  cloudflare.py  frigate.py  npm.py  portainer.py  proxmox.py  unifi.py  uptime_kuma.py
oasisagent/db/: __init__.py  api_models.py  config_store.py  crypto.py  notification_store.py  registry.py  schema.py  stats_store.py  topology_store.py
oasisagent/db/migrations/: 001_initial.py  002_user_roles.py  003_pending_actions.py  004_stats.py  005_learning.py  005_notifications.py  006_suppression_config.py  007_topology.py  008_correlation_clusters.py  009_discovery_interval.py  010_dependency_context_depth.py  011_remediation_plans.py  012_pending_plan_id.py  013_plan_step_notifications.py  014_learning.py  __init__.py
oasisagent/engine/: __init__.py  circuit_breaker.py  context_assembly.py  correlator.py  cross_correlator.py  decision.py  guardrails.py  known_fixes.py  learning.py  plan_executor.py  queue.py  service_graph.py
oasisagent/handlers/: __init__.py  base.py  cloudflare.py  docker.py  homeassistant.py  portainer.py  proxmox.py  unifi.py
oasisagent/ingestion/: __init__.py  base.py  cloudflare.py  emqx.py  frigate.py  ha_log_poller.py  ha_websocket.py  http_poller.py  mqtt.py  n8n.py  nextcloud.py  npm.py  ollama.py  overseerr.py  plex.py  portainer.py  proxmox.py  qbittorrent.py  servarr.py  stalwart.py  tautulli.py  tdarr.py  unifi.py  uptime_kuma.py  vaultwarden.py  webhook.py
oasisagent/llm/: __init__.py  client.py  reasoning.py  triage.py
oasisagent/llm/prompts/: __init__.py  classify_event.py  diagnose_failure.py  (+1 more)
oasisagent/notifications/: __init__.py  base.py  discord.py  dispatcher.py  email.py  interactive.py  mqtt.py  slack.py  telegram.py  web_channel.py  webhook.py
oasisagent/scanner/: __init__.py  backup_freshness.py  base.py  cert_expiry.py  disk_space.py  docker_health.py  ha_health.py
oasisagent/ui/: __init__.py  auth.py  form_specs.py  router.py
oasisagent/util/: dedup.py
oasisagent/web/: __init__.py  api.py  api_config.py  api_setup.py  app.py  middleware.py  webhook.py
scripts/: smoke_test.py
tests/: conftest.py  test_approval_listener.py  test_audit_retry.py  test_backoff.py  test_circuit_breaker.py  test_cli.py  test_cli_config.py  test_config.py  test_config_roundtrip.py  test_context_assembly.py  test_correlator.py  test_decision_engine.py  test_decision_t2.py  test_dependency_context.py  test_discord_notification.py  test_docker_handler.py  test_email_notification.py  test_event_queue.py  test_event_suppression.py  test_file_secrets.py  test_guardrails.py  test_ha_handler.py  test_integration.py  test_interactive_notification.py  test_known_fixes.py  test_learning.py  test_learning_integration.py  test_llm_client.py  test_m1_data_enrichment.py  test_m2a_topology.py  test_m3_cross_correlator.py  test_main.py  test_metrics.py  test_models.py  test_notifications.py  test_orchestrator.py  test_orchestrator_db_build.py  test_orchestrator_health.py  test_orchestrator_restart.py  test_pending.py  (+17 more)
tests/test_audit/: test_reader.py  test_writer.py
tests/test_clients/: test_cloudflare_client.py  test_npm_client.py  test_portainer_client.py  test_proxmox_client.py  test_unifi_client.py  test_uptime_kuma_client.py
tests/test_db/: __init__.py  conftest.py  test_api_config.py  test_config_store.py  test_crypto.py  test_migrations.py  test_notification_store.py
tests/test_handlers/: test_cloudflare.py  test_healthy.py  test_homeassistant.py  test_portainer.py  test_proxmox.py  test_unifi.py
tests/test_ingestion/: test_cloudflare.py  test_emqx.py  test_frigate.py  test_ha_log_poller.py  test_ha_log_poller_runloop.py  test_ha_log_poller_ws.py  test_ha_websocket.py  test_ha_websocket_runloop.py  test_http_poller.py  test_mqtt.py  test_mqtt_iot_topics.py  test_mqtt_runloop.py  test_n8n.py  test_nextcloud.py  test_npm.py  test_ollama.py  test_overseerr.py  test_plex.py  test_portainer_adapter.py  test_proxmox_adapter.py  test_qbittorrent.py  test_servarr.py  test_stalwart.py  test_tautulli.py  test_tdarr.py  test_unifi.py  test_uptime_kuma.py  test_vaultwarden.py
tests/test_scanner/: test_backup_freshness.py  test_base.py  test_cert_expiry.py  test_disk_space.py  test_docker_health.py  test_ha_health.py
tests/test_ui/: conftest.py  test_approvals.py  test_auth.py  test_crud_routes.py  test_enhanced_events.py  test_event_routes.py  test_form_specs.py  test_health_poll_trigger.py  test_health_routes.py  test_htmx_401.py  test_login.py  test_migration.py  test_notification_feed.py  test_pages.py  test_restart_routes.py  test_scanner_page.py  test_service_map.py
tests/test_util/: test_dedup.py
tests/test_web/: __init__.py  test_api_setup.py  test_app.py  test_htmx_401.py  test_webhook.py
(+43 files in other folders)
