[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oasisagent"
version = "0.2.3"
description = "Autonomous infrastructure operations agent for home labs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jason Shearer" },
]
keywords = ["home-assistant", "infrastructure", "automation", "remediation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "aiomqtt>=2.0",
    "aiohttp>=3.9",
    "aiosmtplib>=3.0",
    "prometheus_client>=0.20",
    "influxdb-client[async]>=1.36",
]

[project.scripts]
oasisagent = "oasisagent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations — enforce type hints on all signatures
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["TCH002"]  # pytest must be imported at runtime for fixtures/parametrize

[tool.ruff.lint.isort]
known-first-party = ["oasisagent"]
